<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_blue_tech_1"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="40dp"
        android:text="Additional Utilities"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_phone_24"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:onClick="handleClick"
        android:text="dial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHome" />

    <Button
        android:id="@+id/btnTimer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_hourglass_bottom_24"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:onClick="handleClick"
        android:text="timer 10s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHome" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:background="@color/white"
        android:hint="enter contact"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTimer" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_assignment_turned_in_24"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100dp"
        android:onClick="closeActivity"
        android:text="Finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContact" />

    <Button
        android:id="@+id/btnRecycler"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_autorenew_24"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:text="Recycle View"
        android:onClick="handleClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContact" />
</androidx.constraintlayout.widget.ConstraintLayout>