<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_blue_tech_2"
    tools:context=".MainActivity">


<!--    <EditText-->
<!--        android:id="@+id/etName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="66dp"-->
<!--        android:background="#AC9595"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/enter_name"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        android:textColor="#FFFFFF"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/etPass"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:background="@drawable/ic_launcher_background"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/enter_pw"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etName" />-->

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@null"
        android:text="Welcome"
        android:textColor="@android:color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/ic_baseline_apps_24_light"
        android:onClick="clickHandler"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain"
        app:rippleColor="#FFFFFF" />



    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/ic_baseline_access_alarm_24"
        android:onClick="clickHandler"
        android:text="alarm"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/calculator_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:theme="@style/DefaultButton"
        android:background="@drawable/ic_baseline_calculate_24"
        android:onClick="clickHandler"
        android:text="@string/calculator"
        android:backgroundTint="@null"
        app:layout_constraintStart_toEndOf="@+id/btnAlarm"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />
</androidx.constraintlayout.widget.ConstraintLayout>