<resources>
    <string name="app_name">First App</string>
    <string name="enter_pw">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="login">Login</string>
    <string name="calculator">Calculator</string>
    <string name="utility_app">Utility App</string>
</resources>